[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainGUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -292.0
margin_top = 32.0
margin_right = 292.0
margin_bottom = 688.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 584.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Firing Range"
align = 1
valign = 1

[node name="Blank" type="Label" parent="Panel/VBoxContainer"]
margin_top = 45.0
margin_right = 584.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )

[node name="Settings" type="Label" parent="Panel/VBoxContainer"]
margin_top = 75.0
margin_right = 584.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="Sound Volume" type="Label" parent="Panel/VBoxContainer"]
margin_top = 105.0
margin_right = 584.0
margin_bottom = 119.0
text = "Sound Volume"

[node name="VolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 123.0
margin_right = 584.0
margin_bottom = 139.0
max_value = 10.0
value = 7.0

[node name="Start" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -26.0
margin_right = 69.0
margin_bottom = 26.0
text = "Start (Dev)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseContinue" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -222.234
margin_right = 58.5
margin_bottom = -202.234
text = "Close / Continue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Panel/VBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Panel/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Panel/CloseContinue" to="." method="_on_CloseContinue_pressed"]
[connection signal="pressed" from="Panel/CloseContinue" to="." method="_on_Start_pressed"]
